news: keep daily pages at section root

--- a/content/news/2026-02-24.md
+++ b/content/news/2026-02-24.md
@@ -1,5 +1,5 @@
 ---
-title: "AI News · 2026-02-24"
+title: "2026-02-24"
 date: 2026-02-25T10:00:00+08:00
 draft: true
 summary: "（模板）头版摘要：用 3~5 条 bullet 概括昨日 AI 要闻。"
