--- a/content/news/2026-02-26.md
+++ b/content/news/2026-02-26.md
@@ -1,5 +1,5 @@
 ---
-title: "AI News · 2026-02-26"
+title: "2026-02-26"
 date: 2026-02-26T16:01:00+08:00
 draft: false
 summary: "头版摘要：今天值得关注的 8-10 条 AI 动态（GitHub/HF 与资讯站点各占一半）。"
